@@ -1,5 +1,7 @@
 package net.gpedro.integrations.slack;
 
+import com.google.gson.JsonObject;
+
 import java.io.BufferedReader;
 import java.io.DataOutputStream;
 import java.io.InputStream;
@@ -8,29 +10,35 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
 
-import com.google.gson.JsonObject;
-
 public class SlackApi {
 
-    private String service;
+    private static final String POST = "POST";
+    private static final String PAYLOAD = "payload=";
+    private static final String UTF_8 = "UTF-8";
+
+    private final String service;
+    private final int timeout;
 
     public SlackApi(String service) {
+        this(service, 5000);
+    }
+
+    public SlackApi(String service,
+                    int timeout) {
+        this.timeout = timeout;
         if (service == null) {
             throw new IllegalArgumentException(
                     "Missing WebHook URL Configuration @ SlackApi");
-        } else
-            if (!service.startsWith("https://hooks.slack.com/services/")) {
-                throw new IllegalArgumentException(
-                        "Invalid Service URL. WebHook URL Format: https://hooks.slack.com/services/{id_1}/{id_2}/{token}");
-            }
+        } else if (!service.startsWith("https://hooks.slack.com/services/")) {
+            throw new IllegalArgumentException(
+                    "Invalid Service URL. WebHook URL Format: https://hooks.slack.com/services/{id_1}/{id_2}/{token}");
+        }
 
         this.service = service;
     }
 
     /**
-     * Prepare Message and Send to request
-     * 
-     * @param message
+     * Prepare Message and send to Slack
      */
     public void call(SlackMessage message) {
         if (message != null) {
@@ -38,56 +46,46 @@ public class SlackApi {
         }
     }
 
-    /**
-     * Send request to WebService
-     * 
-     * @param message
-     * @return String response
-     */
     private String send(JsonObject message) {
-        URL url;
         HttpURLConnection connection = null;
         try {
             // Create connection
-            url = new URL(this.service);
+            final URL url = new URL(this.service);
             connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("POST");
-            connection.setConnectTimeout(5000);
+            connection.setRequestMethod(POST);
+            connection.setConnectTimeout(timeout);
             connection.setUseCaches(false);
             connection.setDoInput(true);
             connection.setDoOutput(true);
 
-            String payload = "payload="
-                    + URLEncoder.encode(message.toString(), "UTF-8");
+            final String payload = PAYLOAD
+                    + URLEncoder.encode(message.toString(), UTF_8);
 
             // Send request
-            DataOutputStream wr = new DataOutputStream(
+            final DataOutputStream wr = new DataOutputStream(
                     connection.getOutputStream());
             wr.writeBytes(payload);
             wr.flush();
             wr.close();
 
             // Get Response
-            InputStream is = connection.getInputStream();
-            BufferedReader rd = new BufferedReader(new InputStreamReader(is));
+            final InputStream is = connection.getInputStream();
+            final BufferedReader rd = new BufferedReader(new InputStreamReader(is));
             String line;
-            StringBuffer response = new StringBuffer();
+            StringBuilder response = new StringBuilder();
             while ((line = rd.readLine()) != null) {
                 response.append(line);
-                response.append('\r');
+                response.append('\n');
             }
 
-            System.out.println(response.toString());
             rd.close();
             return response.toString();
 
         } catch (Exception e) {
-
             e.printStackTrace();
             return null;
 
         } finally {
-
             if (connection != null) {
                 connection.disconnect();
             }
